<resources>
    <string name="app_name">HardwareHive</string>
    <string name="pick_an_item">Pick An Item Category</string>
    <string name="search_for_item">Or Search For An Item</string>
    <string name="search">Search</string>
    <string name="update_hardware">Update</string>
    <string name="delete_hardware">Delete</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="in_stock">In Stock:</string>
    <string name="image">Image URL</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="credits">Credits</string>
    <string name="tap_to_sign_up">Don\'t have an account? Sign up</string>
    <string name="tap_to_log_in">Already have an account? Login</string>
    <string name="view_users">View users</string>
    <string name="users">Users</string>
    <string name="admin">Admin account?</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="add_item_to_cart">Add item to cart</string>
    <string name="remove_item_from_cart">Remove item from cart</string>
    <string name="create_new_item">Create New Item</string>
    <string name="checkout">Checkout</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="total">Total</string>
    <string name="search_bar">Search Bar</string>
    <string name="inventory">%1$s Inventory</string>
    <string name="word_before_colon">%1$s:</string>
    <string name="category_image">Category Image</string>
    <string name="hardware_image">Hardware Image</string>
    <string name="go_back_button">Go Back Button</string>
    <string name="specification_value">Specification Value</string>
</resources>