<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:ellipsize="none"
                android:hint="@string/email"
                android:scrollbars="horizontal"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textSize="20sp" />

            <View
                android:id="@+id/divider4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.01"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:ellipsize="none"
                android:hint="@string/username"
                android:scrollbars="horizontal"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textSize="20sp" />

            <View
                android:id="@+id/divider5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.01"
                android:background="?android:attr/listDivider" />

            <EditText
                android:id="@+id/creditsTextNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="none"
                android:ems="10"
                android:hint="@string/credits"
                android:importantForAutofill="no"
                android:inputType="number|numberDecimal"
                android:scrollbars="horizontal"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>